[gd_scene load_steps=72 format=3 uid="uid://0l0r6ulwoyts"]

[ext_resource type="Script" path="res://scripts/player/player.gd" id="1_v4qo1"]
[ext_resource type="Texture2D" uid="uid://codo4ufookglc" path="res://textures/player/Player_idle.png" id="2_kxncc"]
[ext_resource type="PackedScene" uid="uid://dj7u2hq5sywed" path="res://scenes/rafts/raft_planks.tscn" id="2_yrv08"]
[ext_resource type="PackedScene" uid="uid://bi8xlq3p31nwi" path="res://scenes/rafts/raft_logs.tscn" id="3_p8g48"]
[ext_resource type="Texture2D" uid="uid://cwu27q8qxdliw" path="res://textures/player/Player_run.png" id="3_u60ss"]
[ext_resource type="Texture2D" uid="uid://bg1adjvnnvrd3" path="res://textures/player/Player_attack_idle.png" id="3_xmeut"]
[ext_resource type="PackedScene" uid="uid://dfxrmnyklf0mw" path="res://scenes/rafts/raft_metal.tscn" id="4_7sefx"]
[ext_resource type="Texture2D" uid="uid://bs23318cmccsx" path="res://textures/player/Splash.png" id="4_bsick"]
[ext_resource type="Texture2D" uid="uid://cglv4ysqyt88p" path="res://textures/player/Player_attack_run.png" id="4_oohy6"]
[ext_resource type="PackedScene" uid="uid://dtfvx6n84gkqv" path="res://scenes/towers/tower.tscn" id="5_gks2k"]
[ext_resource type="Texture2D" uid="uid://drgi145jpd3di" path="res://textures/player/Player_swim_idle.png" id="7_8cb56"]
[ext_resource type="Texture2D" uid="uid://dbibxag8a4081" path="res://textures/player/Player_swim_attack.png" id="7_o1muf"]
[ext_resource type="Texture2D" uid="uid://de5frkpefytu5" path="res://textures/player/Player_swim_run.png" id="8_cnthv"]
[ext_resource type="Theme" uid="uid://btp17lophm3xe" path="res://others/maintheme.tres" id="10_uhybp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4p18u"]
size = Vector2(16, 17)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6ato5"]
size = Vector2(16, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7yq1n"]
size = Vector2(16, 24)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37ycn"]
size = Vector2(10, 10)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_aq4yn"]
size = Vector2(16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_snmny"]
atlas = ExtResource("2_kxncc")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_b1ftx"]
atlas = ExtResource("2_kxncc")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhpng"]
atlas = ExtResource("2_kxncc")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_86mlw"]
atlas = ExtResource("2_kxncc")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_6giuy"]
atlas = ExtResource("2_kxncc")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xc77j"]
atlas = ExtResource("2_kxncc")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lj3pl"]
atlas = ExtResource("2_kxncc")
region = Rect2(96, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cs1v6"]
atlas = ExtResource("2_kxncc")
region = Rect2(112, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x7qt6"]
atlas = ExtResource("2_kxncc")
region = Rect2(128, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gvhhi"]
atlas = ExtResource("2_kxncc")
region = Rect2(144, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_04hmr"]
atlas = ExtResource("2_kxncc")
region = Rect2(160, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_isumk"]
atlas = ExtResource("2_kxncc")
region = Rect2(176, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nwitu"]
atlas = ExtResource("3_xmeut")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_g5hjw"]
atlas = ExtResource("3_xmeut")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wytdf"]
atlas = ExtResource("3_xmeut")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_v802u"]
atlas = ExtResource("3_xmeut")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tj0em"]
atlas = ExtResource("3_xmeut")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cbdg7"]
atlas = ExtResource("3_xmeut")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_sv278"]
atlas = ExtResource("3_u60ss")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_q4y4y"]
atlas = ExtResource("3_u60ss")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_gjbnr"]
atlas = ExtResource("3_u60ss")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_t2dlp"]
atlas = ExtResource("3_u60ss")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n3aod"]
atlas = ExtResource("3_u60ss")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_0waqm"]
atlas = ExtResource("3_u60ss")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehmf2"]
atlas = ExtResource("4_oohy6")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrc0o"]
atlas = ExtResource("4_oohy6")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qw0m3"]
atlas = ExtResource("4_oohy6")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_av5in"]
atlas = ExtResource("4_oohy6")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x5gyc"]
atlas = ExtResource("4_oohy6")
region = Rect2(64, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_yldhj"]
atlas = ExtResource("4_oohy6")
region = Rect2(80, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_dypon"]
atlas = ExtResource("7_o1muf")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_qs7xm"]
atlas = ExtResource("7_o1muf")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_4m7pj"]
atlas = ExtResource("7_o1muf")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ume17"]
atlas = ExtResource("7_o1muf")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2nh5n"]
atlas = ExtResource("7_8cb56")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_24rfr"]
atlas = ExtResource("7_8cb56")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_x1sun"]
atlas = ExtResource("7_8cb56")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fdjxu"]
atlas = ExtResource("7_8cb56")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_85ip8"]
atlas = ExtResource("8_cnthv")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xo6t8"]
atlas = ExtResource("8_cnthv")
region = Rect2(32, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2x8u0"]
atlas = ExtResource("8_cnthv")
region = Rect2(48, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xjmo8"]
atlas = ExtResource("8_cnthv")
region = Rect2(0, 0, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_6qxd6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_snmny")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_b1ftx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhpng")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_86mlw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6giuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xc77j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lj3pl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cs1v6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x7qt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gvhhi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_04hmr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isumk")
}],
"loop": true,
"name": &"idle",
"speed": 13.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nwitu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g5hjw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wytdf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v802u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tj0em")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cbdg7")
}],
"loop": true,
"name": &"idle_attack",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_sv278")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_q4y4y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gjbnr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t2dlp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n3aod")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0waqm")
}],
"loop": true,
"name": &"run",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehmf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wrc0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qw0m3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_av5in")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x5gyc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yldhj")
}],
"loop": true,
"name": &"run_attack",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_dypon")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qs7xm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4m7pj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ume17")
}],
"loop": true,
"name": &"swim_attack",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2nh5n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_24rfr")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x1sun")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fdjxu")
}],
"loop": true,
"name": &"swim_idle",
"speed": 9.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_85ip8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xo6t8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2x8u0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xjmo8")
}],
"loop": true,
"name": &"swim_run",
"speed": 11.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tlkl4"]
atlas = ExtResource("4_bsick")
region = Rect2(0, 0, 5, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_acss0"]
atlas = ExtResource("4_bsick")
region = Rect2(5, 0, 5, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_5riro"]
atlas = ExtResource("4_bsick")
region = Rect2(10, 0, 5, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_rrsld"]
atlas = ExtResource("4_bsick")
region = Rect2(15, 0, 5, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_7nuqo"]
atlas = ExtResource("4_bsick")
region = Rect2(20, 0, 5, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_2fi5e"]
atlas = ExtResource("4_bsick")
region = Rect2(25, 0, 5, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_mode2"]
atlas = ExtResource("4_bsick")
region = Rect2(30, 0, 5, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_4w0hs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tlkl4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_acss0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5riro")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rrsld")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7nuqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2fi5e")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mode2")
}],
"loop": true,
"name": &"default",
"speed": 20.0
}]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2gwof"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.199851, 5.07298e-05, 0.720906, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.831373, 0.588235, 0, 1)
border_blend = true

[node name="Player" type="Node2D" groups=["ENTITY_allies", "Player"]]
script = ExtResource("1_v4qo1")
attack_reload = 10
placeables = Array[PackedScene]([ExtResource("2_yrv08"), ExtResource("3_p8g48"), ExtResource("4_7sefx"), ExtResource("5_gks2k")])
place_costs = Array[Array]([[2], [3, 2], [0, 1, 3], [2, 2, 3]])
min_place_distance = 900.0

[node name="PlaceArea" type="Area2D" parent="."]
position = Vector2(16, 0)
collision_layer = 0
collision_mask = 16

[node name="PlaceBox" type="CollisionShape2D" parent="PlaceArea"]
position = Vector2(0, -0.5)
shape = SubResource("RectangleShape2D_4p18u")
debug_color = Color(0.852544, 0.179958, 0.756203, 0.556863)

[node name="ColorRect" type="ColorRect" parent="PlaceArea"]
offset_left = -8.0
offset_top = -9.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(1, 0, 1, 0.282353)

[node name="WaterArea" type="Area2D" parent="."]
position = Vector2(0, 6)
collision_layer = 0
collision_mask = 8

[node name="WaterBox" type="CollisionShape2D" parent="WaterArea"]
shape = SubResource("RectangleShape2D_6ato5")

[node name="PlayerDmgArea" type="Area2D" parent="."]

[node name="PlayerDmgBox" type="CollisionShape2D" parent="PlayerDmgArea"]
position = Vector2(8, 0)
shape = SubResource("RectangleShape2D_7yq1n")
disabled = true

[node name="HurtArea" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 4

[node name="HurtBox" type="CollisionShape2D" parent="HurtArea"]
shape = SubResource("RectangleShape2D_37ycn")

[node name="CollectArea" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollectBox" type="CollisionShape2D" parent="CollectArea"]
shape = SubResource("RectangleShape2D_aq4yn")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_6qxd6")
animation = &"swim_run"

[node name="AnimatedSpriteSplash" type="AnimatedSprite2D" parent="."]
position = Vector2(10.25, 0)
sprite_frames = SubResource("SpriteFrames_4w0hs")
frame_progress = 0.806171

[node name="DrowningBar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_top = -12.0
offset_right = 8.0
offset_bottom = -8.0
theme = ExtResource("10_uhybp")
theme_override_styles/fill = SubResource("StyleBoxFlat_2gwof")
value = 100.0
show_percentage = false

[node name="HealthBar" type="ProgressBar" parent="."]
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = -12.0
theme = ExtResource("10_uhybp")
value = 100.0
show_percentage = false
